Completed the Update User Profile and Update User Preferences APIs
